agrego de imagenes

--- a/index.html
+++ b/index.html
@@ -39,27 +39,33 @@
     <section id="nuestro-catalogo">
 <div class="container">
         <h2>Nuestros Productos</h2>
-
-        <div class="carta">
+        
+<div class="productos">
+  <div class="carta">
         <h3>Massking</h3>
         <p>Vape pequeño, practico y delicioso</p>
  <button>+ Info</button>                
         </div>
+
         <div class="carta">
         <h3>Iplay</h3>
         <p>Sabores únicos e intensos . De los favoritos por ser tan duradero </p>
 <button>+ Info</button>
         </div>
+
         <div class="carta">
         <h3>Lio boom</h3>
         <p>Diseños creativos y hermosos. </p>
 <button>+ Info</button>
         </div>
+
         <div class="carta">
         <h3>Wonder</h3>
         <p>Sabores creamy e inigualables </p>
 <button>+ Info</button>
         </div>
+
+    </div>
     </div>
     </section>
 
