--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="container">
         <img id="logo" src="./logo.jpeg" alt="">
             <nav>
-                <a href="">Productos</a>
-                <a href="">Accesorios</a>
-                <a href="">Sale!</a>
+                <a href="#nuestro-catalogo">Productos</a>
+                <a href="#conoce-productos">Accesorios</a>
+                <a href="#hero">Sale!</a>
             </nav>
         </div>
     </header>
