--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
 
 
 <section id="Beneficios">
-<div class="container"></div>
+<div class="container">
     <ul>
     <li>&#127776;Discreción</li>
     <li>&#127776;Precios accesibles</li>
     <li>&#127776;Durabilidad</li>
     <li>&#127776;Mas sano que el tabaco</li>
 </ul>
+</div>
 </section>
 
-<section id="compra">
+<section id="final">
     <h2>Listo para vapear?</h2>
     <button>Comprar!</button>
 </section>
