--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <section id="conoce-productos">
         <div class="container">
         <div class="img-container"></div>
-
+        <div class="texto">
+        
         <h2>New <span class="color-acento">Trendy</span></h2>
         <p>Tenemos los mejores productos que estan en tendencia para que puedas disfrutarlo.<br>Conoce nuestro catalogo! </p>
-
+    </div>
+    </div>
     </section>
 
 
@@ -72,6 +74,7 @@
 
 <section id="Beneficios">
 <div class="container">
+    <h2>Beneficios</h2>
     <ul>
     <li>&#127776;Discreción</li>
     <li>&#127776;Precios accesibles</li>
