agrego de registro

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <a href="#nuestro-catalogo">Productos</a>
                 <a href="#conoce-productos">Accesorios</a>
                 <a href="#hero">Sale!</a>
+                <li class="menu_item separator"></li>
+                <a href="Regristo">Registrate</a>
+                <a href="signin">Iniciar sesion</a>
             </nav>
         </div>
     </header>
