--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#conoce-productos">Accesorios</a>
                 <a href="#hero">Sale!</a>
                 <li class="menu_item separator"></li>
-                <a href="Regristo">Registrate</a>
+                <a href="registro.html">Registrate</a>
                 <a href="signin">Iniciar sesion</a>
             </nav>
         </div>
