commit final final

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 <a href="#nuestro-catalogo">Productos</a>
                 <a href="#conoce-productos">Accesorios</a>
                 <a href="#hero">Sale!</a>
+                <ul>
                 <li class="menu_item separator"></li>
+            </ul>
                 <a href="registro.html">Registrate</a>
-                <a href="signin">Iniciar sesion</a>
+                <a href="sesion.html">Iniciar sesion</a>
             </nav>
         </div>
     </header>
