--- a/registro.html
+++ b/registro.html
@@ -33,7 +33,7 @@
   <input type="submit" value="Registrate" class="button">
   <p>Al registrarte, aceptas ser mayor de 18 años de edad 
     tambien aceptas nuestras Condiciones de Uso y Politica de privacidad.</p>
-<p>Ya tienes cuenta? <a class="link" href="">Iniciar sesion</a></p>
+<p>Ya tienes cuenta? <a class="link" href="./sesion.html">Iniciar sesion</a></p>
 </div>
 </form>
 </body>
